--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-sm-3 col-sm-offset-3 contact-image">
-        <img class="editable" src="/uploads/retrato-cara-1.jpg" width="3284" />
+        <img class="editable" src="{{site.baseurl}}/uploads/retrato-cara-1.jpg" width="3284" />
       </div>
       <div class="col-sm-6">
         <div class="contact-content">
